Use py3 instead of py2

--- a/docker/worker/Dockerfile
+++ b/docker/worker/Dockerfile
@@ -7,22 +7,23 @@ ca-certificates \
 john \
 john-data \
 libterm-readline-gnu-perl \
-python-pip \
+python3-dev \
+python3-pip \
+python3-setuptools \
+python3-wheel \
 software-properties-common \
 sudo \
 && rm -rf /var/lib/apt/lists/*
 
-RUN pip install urllib3 cryptography --upgrade
-RUN pip install turbinia
+RUN pip3 install urllib3 cryptography --upgrade
+RUN pip3 install turbinia
 
 # Install Plaso
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 0x5e80511b10c598b8 \
-&& add-apt-repository -y ppa:gift/stable
-
-RUN apt-get -y install python-plaso plaso-tools --option Acquire::ForceIPv4=true --option Acquire::Retries=100 --option Acquire::http::Timeout=60
+RUN add-apt-repository -y ppa:gift/stable
+RUN apt-get -y install plaso-tools --option Acquire::ForceIPv4=true --option Acquire::Retries=100 --option Acquire::http::Timeout=60
 
 # Install Hindsight
-RUN pip install pyhindsight
+RUN pip3 install pyhindsight
 
 RUN useradd -r -s /bin/nologin -G disk turbinia
 RUN echo "turbinia ALL = (root) NOPASSWD: /bin/mount,/bin/umount,/sbin/losetup" > /etc/sudoers.d/turbinia
