--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         time: 5s
     - name: Startup local turbinia docker-compose stack
-      run: docker-compose -d -f ./docker/local/docker-compose.yml up
+      run: docker-compose -f ./docker/local/docker-compose.yml up
     - name: Show running instances
       run: docker ps
     - name: Show server logs
