--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,7 +34,7 @@ jobs:
         docker logs turbinia-worker
     - name: Run E2E test
       run: |
-        docker exec turbinia-server turbiniactl compresseddirectory -l /evidence/history.tgz > request.txt
+        docker exec -t turbinia-server turbiniactl compresseddirectory -l /evidence/history.tgz > request.txt
         cat request.txt
         echo "REQUEST_ID=`cat request.txt |grep Creating | sed -e 's/.*request \(.*\) with.*/\1/'`" >> $GITHUB_ENV
         echo $REQUEST_ID
