--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Build Turbinia server docker image
+      run: docker build --cache-from=ubuntu:18.04,us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server-dev:latest -t turbinia-server-dev -f docker/server/Dockerfile .
+    - name: Build Turbinia server worker image
+      run: docker build --cache-from=ubuntu:18.04,us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-worker-dev:latest -t turbinia-worker-dev -f docker/worker/Dockerfile .
     - name: Prepare Turbinia configuration and e2e evidence
       run: |
         mkdir ./conf
@@ -35,17 +39,14 @@ jobs:
     - name: Run E2E test
       run: |
         docker exec -t turbinia-server turbiniactl compresseddirectory -l /evidence/history.tgz > request.txt
-        cat request.txt
         echo "REQUEST_ID=`cat request.txt |grep Creating | sed -e 's/.*request \(.*\) with.*/\1/'`" >> $GITHUB_ENV
-        echo $REQUEST_ID
     - name: Sleep for 60s
       uses: juliangruber/sleep-action@v1
       with:
         time: 60s
     - name: Poll request status
       run: docker exec turbinia-server turbiniactl -a status -r $REQUEST_ID
-    - name: Show container logs
-      run: |
-        docker logs turbinia-server
-        docker logs turbinia-worker
-
+    - name: Show Turbinia server logs
+      run: docker logs turbinia-server
+    - name: Show Turbinia worker logs
+      run: docker logs turbinia-worker
