--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Pull docker images for cache
+      run: |
+        docker pull ubuntu:18.04
+        docker pull us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server-dev:latest
+        docker pull us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-worker-dev:latest
     - name: Build Turbinia server docker image
       run: docker build --cache-from=ubuntu:18.04,us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server-dev:latest -t turbinia-server-dev -f docker/server/Dockerfile .
     - name: Build Turbinia server worker image
