--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 celery<5.0
 docker
-fastapi[all]
+fastapi
 filelock
 google-api-core
 google-api-python-client
@@ -20,3 +20,4 @@ urllib3[secure]
 vine==1.3.0
 PyJWT[crypto]<2
 idna==2.10
+uvicorn[standard]
