--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 celery<5.0
 docker
-fastapi
+fastapi[all]
 filelock
-google-api-core
+google-api-core<1.26
 google-api-python-client
 google-auth
 google-cloud-core
@@ -20,4 +20,3 @@ urllib3[secure]
 vine==1.3.0
 PyJWT[crypto]<2
 idna==2.10
-uvicorn[standard]
