--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get -y install \
     python3 \
     python3-pip \
     software-properties-common \
+    sudo \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install pip --upgrade
@@ -16,8 +17,8 @@ RUN pip3 install urllib3 cryptography --upgrade
 
 ADD requirements.txt /tmp/
 RUN cd /tmp/ && pip3 install -r requirements.txt
-ADD dfvfs_requirements.txt /tmp/
-RUN cd /tmp/ && pip3 install -r dfvfs_requirements.txt
+#ADD dfvfs_requirements.txt /tmp/
+#RUN cd /tmp/ && pip3 install -r dfvfs_requirements.txt
 
 ADD . /tmp/
 # unshallow and fetch all tags so our build systems pickup the correct git tag if it's a shallow clone
