--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,18 @@ celery<5.0
 cryptography>=2.0.2,<3.4
 docker
 filelock
-google-api-core<1.26.0.dev0
-google-api-python-client
-google-auth<2.0.0.dev0
+#google-api-core<1.26.0.dev0
+#google-api-python-client
+#google-auth<2.0.0.dev0
 google-cloud-core
-google-cloud-datastore<=2.0.0
-google-cloud-error-reporting
-google-cloud-logging<2.1,>=2.0.0
-google-cloud-pubsub==1.7.0
-google-cloud-storage
+#google-cloud-datastore<=2.0.0
+#google-cloud-error-reporting
+#google-cloud-logging<2.1,>=2.0.0
+#google-cloud-pubsub==1.7.0
+#google-cloud-storage
 prometheus_client
 libcloudforensics
-psq
+#psq
 redis
 six>=1.15.0
 urllib3[secure]
