--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -29,5 +29,6 @@ jobs:
           sed -i -e 's/#image: "t/image: "t/g' -e 's/image: "u/#image: "u/g' ./docker/local/docker-compose.yml
       - name: Run E2E test
         run: |
+          docker image ls
           chmod +x ./turbinia/e2e/e2e-local.sh
           ./turbinia/e2e/e2e-local.sh
