--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -16,7 +16,7 @@ services:
      - REDIS_REPLICATION_MODE=master
 
  turbinia-server:
-    #image: "turbinia-server" # Use this for local development and comment out below line
+    #image: "turbinia-server-dev" # Use this for local development and comment out below line
     image: "us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server:latest" # Latest stable
     container_name: turbinia-server
 
@@ -29,7 +29,7 @@ services:
      - LANG=C.UTF-8
 
  turbinia-worker:
-    #image: "turbinia-worker" # Use this for local development and comment out below line
+    #image: "turbinia-worker-dev" # Use this for local development and comment out below line
     image: "us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-worker:latest" # Latest stable
     container_name: turbinia-worker
     privileged: true
