--- a/k8s/local/turbinia-server.yaml
+++ b/k8s/local/turbinia-server.yaml
@@ -23,14 +23,16 @@ spec:
           name: criticalvolume
       containers:
       - name: server
-        #image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server:latest
-        image: rbdebeer/turbinia-server-dev 
+        image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server-dev:latest
+        #image: rbdebeer/turbinia-server-dev 
         env:
         - name: TURBINIA_CONF
           valueFrom:
             configMapKeyRef:
               name: turbinia-config
               key: TURBINIA_CONF
+        - name: TURBINIA_EXTRA_ARGS
+          value: "-d"
         volumeMounts:
         - mountPath: /mnt/criticalvolume
           name: criticalvolume
