--- a/k8s/local/turbinia-server.yaml
+++ b/k8s/local/turbinia-server.yaml
@@ -11,6 +11,9 @@ spec:
       app: turbinia-server
   template:
     metadata:
+      annotations:
+        prometheus.io/port: 9200
+        prometheus.io/scrape: true
       labels:
         app: turbinia-server
     spec:
@@ -23,8 +26,8 @@ spec:
           name: criticalvolume
       containers:
       - name: server
-        image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server-dev:latest
-        #image: rbdebeer/turbinia-server-dev 
+        #image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server-dev:latest
+        image: rbdebeer/turbinia-server-dev 
         env:
         - name: TURBINIA_CONF
           valueFrom:
