--- a/k8s/local/turbinia-server.yaml
+++ b/k8s/local/turbinia-server.yaml
@@ -12,8 +12,8 @@ spec:
   template:
     metadata:
       annotations:
-        prometheus.io/port: 9200
-        prometheus.io/scrape: true
+        prometheus.io/port: "9200"
+        prometheus.io/scrape: "true"
       labels:
         app: turbinia-server
     spec:
