--- a/k8s/celery/redis-server.yaml
+++ b/k8s/celery/redis-server.yaml
@@ -18,29 +18,29 @@ spec:
       securityContext:
         seccompProfile:
           type: RuntimeDefault
-      initContainers:
-        - name: init-filestore
-          image: busybox:1.28
-          command: ["sh", "-c", "echo never > /host-sys/kernel/mm/transparent_hugepage/enabled"]
-          volumeMounts:
-            - mountPath: /mnt/turbiniavolume
-              name: turbiniavolume
-            - mountPath: /host-sys
-              name: host-sys
+      # initContainers:
+      #   - name: init-filestore
+      #     image: busybox:1.28
+      #     command: ["sh", "-c", "echo never > /host-sys/kernel/mm/transparent_hugepage/enabled"]
+      #     volumeMounts:
+      #       - mountPath: /mnt/turbiniavolume
+      #         name: turbiniavolume
+      #       - mountPath: /host-sys
+      #         name: host-sys
       containers:
         - name: redis
           image: "docker.io/redis:latest"
           args: ["--appendonly", "yes", "--save", "30", "1", "--client-output-buffer-limit", "pubsub", "268435456", "67108864", "0"]
           workingDir: /mnt/turbiniavolume/redis
-          resources:
-            requests:
-              cpu: 2000m
-              memory: 2000Mi
+          # resources:
+          #   requests:
+          #     cpu: 2000m
+          #     memory: 2000Mi
           ports:
             - containerPort: 6379
           volumeMounts:
-            - mountPath: /mnt/turbiniavolume
-              name: turbiniavolume
+            - name: turbiniavolume
+              mountPath: /mnt/turbiniavolume
           securityContext:
             readOnlyRootFilesystem: true
       volumes:
@@ -48,6 +48,6 @@ spec:
           persistentVolumeClaim:
             claimName: turbiniavolume-claim
             readOnly: false
-        - name: host-sys
-          hostPath:
-            path: /sys
+              # - name: host-sys
+        #   hostPath:
+        #     path: /sys
