--- a/docker/api_server/Dockerfile
+++ b/docker/api_server/Dockerfile
@@ -46,6 +46,13 @@ RUN chmod +rwx /home/turbinia/start.sh
 # Install Turbinia package -- will skip dependencies if installed
 RUN poetry install --no-interaction --no-ansi
 
+# Debug and hot reload env
+ARG TURBINIA_DEBUG
+ARG TURBINIA_HOTRELOAD
+ARG TURBINIA_DEBUG_PORT
+ENV TURBINIA_DEBUG ${TURBINIA_DEBUG:-0}
+ENV TURBINIA_DEBUG_PORT ${TURBINIA_DEBUG_PORT:-30000}
+
 CMD ["/home/turbinia/start.sh"]
 # Expose Prometheus and API endpoints.
 EXPOSE 9200/tcp
